[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="HBoxContainer" parent="MarginContainer"]
margin_right = 348.0
margin_bottom = 684.0
rect_min_size = Vector2( 0, 64 )

[node name="LevelDisplay" type="VBoxContainer" parent="MarginContainer/Display"]
margin_right = 113.0
margin_bottom = 684.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Display/LevelDisplay"]
margin_right = 113.0
margin_bottom = 14.0
text = "LEVEL"

[node name="Level" type="Label" parent="MarginContainer/Display/LevelDisplay"]
margin_top = 18.0
margin_right = 113.0
margin_bottom = 32.0
text = "LEVEL"

[node name="LevelDisplay2" type="VBoxContainer" parent="MarginContainer/Display"]
margin_left = 117.0
margin_right = 230.0
margin_bottom = 684.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Display/LevelDisplay2"]
margin_right = 113.0
margin_bottom = 14.0
text = "LEVEL"

[node name="Level" type="Label" parent="MarginContainer/Display/LevelDisplay2"]
margin_top = 18.0
margin_right = 113.0
margin_bottom = 32.0
text = "LEVEL"

[node name="SubLevelDisplay" type="VBoxContainer" parent="MarginContainer/Display"]
margin_left = 234.0
margin_right = 348.0
margin_bottom = 684.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Display/SubLevelDisplay"]
margin_right = 114.0
margin_bottom = 14.0
text = "LEVEL"

[node name="SubLevel" type="Label" parent="MarginContainer/Display/SubLevelDisplay"]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 32.0
text = "LEVEL"
